# rac-conformance

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
conductor/: NEXTGEN_RELEASE_STATUS.md  PROGRAMME_GATE_ACTION_PACKET.md  PROGRAMME_GATE_CONFIRMATIONS.json  PROGRAMME_GATE_REGISTRY.json  V1_REMAINING_GATES_PACKET.md  V1_ROADMAP.md  edithatogo-repo-boundaries.md  index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  v1-release-gates.json  workflow.md
contracts/: CONSUMERS.md  FEEDBACK.md  VERSIONING.md
converters/fixtures/: SUPPORTED.md  pyproject.toml
converters/fixtures/corpus/: MANIFEST.md
converters/fixtures/src/pic_fixture_converters/: __init__.py  core.py
converters/fixtures/tests/: test_openfisca_converter.py  test_policyengine_converter.py
docs/: INDEPENDENT_VALIDATION_POLICY.md  V1_FUZZ_BASELINE.json  V1_HOSTED_QUALIFICATION.md  V1_MUTATION_GATE.json  V1_REPRODUCIBILITY.json  V1_ROLLBACK_REHEARSAL.json  V1_VALIDATION_BASELINE.json
independent/: STATUS_LEDGER.json
papers/: CITATION_LEDGER.md  SUBMISSION_CANDIDATE_V0.3.0.md
project_repo_racx/: STATUS.md
studies/: NEXT_STUDY_SELECTION.md
tools/: generate_adverse_incident_fixtures.py  independent_evidence.py  independent_status.py  independent_validation.py  paper_artifacts.py  process_mappings_rehearsal.py  release_gates.py  repo_audit.py  v1_fuzz.py  v1_mutation.py  v1_release_audit.py  validate_foio_evidence_bundle.py  validate_programme_citations.py  (+3 more)
(+311 files in other folders)
