[project]
name = "pic-fixture-converters"
version = "0.1.0"
description = "Deterministic converters between OpenFisca, PolicyEngine, and PIC fixtures."
requires-python = ">=3.12"
dependencies = ["PyYAML>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.coverage.run]
branch = true
source = ["pic_fixture_converters"]

[tool.coverage.report]
fail_under = 80
